--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="scene-card">
         <h2>Escena 1</h2>
         <p>EL SOL NO CANTA / MI CUERPO ES SOLO MÍO</p>
-        <a href="escena1.html">Ver Escena</a>
+        <a href="https://musicalaescuela.github.io/escena1alegremente/">Ver Escena</a>
       </div>
 
       <div class="scene-card">
@@ -149,3 +149,4 @@
 
 </body>
 </html>
+
