--- a/index.html
+++ b/index.html
@@ -104,43 +104,43 @@
       <div class="scene-card">
         <h2>Escena 2</h2>
         <p>BUENOS AIRES DEL ALMA / MANGO TANGO</p>
-        <a href="escena2.html">Ver Escena</a>
+        <a href="https://musicalaescuela.github.io/escena2alegremente/">Ver Escena</a>
       </div>
 
       <div class="scene-card">
         <h2>Escena 3</h2>
         <p>CARNAVAL / PUEBLO TAMBOR / SIYAHAMBA</p>
-        <a href="escena3.html">Ver Escena</a>
+        <a href="https://musicalaescuela.github.io/escena3alegremente/">Ver Escena</a>
       </div>
 
       <div class="scene-card">
         <h2>Escena 4</h2>
         <p>CIUDAD RIMA / HAPPY BLUES</p>
-        <a href="escena4.html">Ver Escena</a>
+        <a href="https://musicalaescuela.github.io/escena4alegremente/">Ver Escena</a>
       </div>
 
       <div class="scene-card">
         <h2>Escena 5</h2>
         <p>MONTAÑA TRENZA / VIVO EN UN PAÍS</p>
-        <a href="escena5.html">Ver Escena</a>
+        <a href="https://musicalaescuela.github.io/escena5alegremente/">Ver Escena</a>
       </div>
 
       <div class="scene-card">
         <h2>Escena 6</h2>
         <p>TIERRA IMAGINARIA</p>
-        <a href="escena6.html">Ver Escena</a>
+        <a href="https://musicalaescuela.github.io/escena6alegremente/">Ver Escena</a>
       </div>
 
       <div class="scene-card">
         <h2>Escena 7</h2>
         <p>ISLA ALEGRÍA / MERENGUE DEL PRIMER DEDO</p>
-        <a href="escena7.html">Ver Escena</a>
+        <a href="https://musicalaescuela.github.io/escena7alegremente/">Ver Escena</a>
       </div>
 
       <div class="scene-card">
         <h2>Escena 8</h2>
         <p>COLOMBIA TIERRA QUERIDA</p>
-        <a href="escena8.html">Ver Escena</a>
+        <a href="https://musicalaescuela.github.io/escena8alegremente/">Ver Escena</a>
       </div>
     </div>
 
@@ -149,4 +149,5 @@
 
 </body>
 </html>
+
 
