--- a/index.html
+++ b/index.html
@@ -1,153 +1,309 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Menú de Escenas - AlegreMente 2025</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Menú de Escenas – AlegreMente 2025</title>
+<style>
+  :root{
+    --bg:#f7f7f9; --card:#ffffff; --text:#1f2937; --muted:#6b7280;
+    --primary:#ff0066; --primary-600:#cc0052; --ring:#e5e7eb;
+    --radius:16px; --shadow:0 8px 24px rgba(0,0,0,.08);
+  }
+  *{box-sizing:border-box}
+  body{ margin:0; background:var(--bg); color:var(--text);
+    font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Arial, sans-serif;}
+  header{ position:sticky; top:0; z-index:10; background:#fff; box-shadow:0 1px 0 var(--ring);}
+  .wrap{max-width:1200px; margin:0 auto; padding:14px 18px; display:flex; align-items:center; gap:16px}
+  .brand{display:flex; align-items:center; gap:12px}
+  .brand img{width:44px; height:44px; border-radius:12px; object-fit:cover; box-shadow:0 2px 8px rgba(0,0,0,.1)}
+  h1{font-size:20px; margin:0}
+  .sub{color:var(--muted); font-size:13px}
 
-    .container {
-      max-width: 1200px;
-      margin: 40px auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
+  main{max-width:1200px; margin:28px auto; padding:0 18px}
+  .controls{display:flex; gap:10px; align-items:center; justify-content:flex-end; margin-bottom:16px}
+  .select{
+    appearance:none; border:1px solid var(--ring); background:#fff; color:var(--text);
+    padding:10px 12px; border-radius:10px; font-size:14px; min-width:220px;
+  }
 
-    h1 {
-      font-size: 32px;
-      color: #333;
-      margin-bottom: 20px;
-    }
+  .grid{ display:grid; gap:18px; grid-template-columns: repeat(auto-fit, minmax(260px,1fr)); }
+  .card{
+    background:var(--card); border-radius:var(--radius); box-shadow:var(--shadow);
+    padding:18px; border:1px solid var(--ring); transition:transform .18s ease, box-shadow .18s ease;
+  }
+  .card:hover{ transform:translateY(-4px); box-shadow:0 12px 30px rgba(0,0,0,.12) }
 
-    .logo {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      width: 90px;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.2);
-    }
+  .topline{display:flex; align-items:center; justify-content:space-between; margin-bottom:12px; gap:12px}
+  .chips{display:flex; flex-wrap:wrap; gap:6px}
+  .chip{
+    font-size:12px; padding:6px 10px; border-radius:999px; background:#fff0f6; color:var(--primary);
+    border:1px dashed #ffd1e5;
+  }
+  /* Colores por centro (opcional) */
+  .chip[data-center="Arroyo"]{ background:#ecfeff; color:#0369a1; border-color:#bae6fd }
+  .chip[data-center="Jerusalén"]{ background:#f0fdf4; color:#166534; border-color:#bbf7d0 }
+  .chip[data-center="Lucero"]{ background:#fdf2f8; color:#a21caf; border-color:#f5d0fe }
+  .chip[data-center="Padre Misericordioso A"]{ background:#faf5ff; color:#6b21a8; border-color:#e9d5ff }
+  .chip[data-center="Padre Misericordioso B"]{ background:#faf5ff; color:#6b21a8; border-color:#e9d5ff }
+  .chip[data-center="Santo Domingo"]{ background:#fff7ed; color:#9a3412; border-color:#fed7aa }
+  .chip[data-center="GMMMC"]{ background:#eef2ff; color:#3730a3; border-color:#c7d2fe }
 
-    .menu-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
+  .num{
+    width:54px; height:54px; border-radius:50%; display:grid; place-items:center;
+    background: radial-gradient(120px 120px at 30% 30%, #ffd1e6, #ffe8f2 70%);
+    border:2px solid #ffd1e6; color:#b00047; font-weight:800; font-size:18px;
+    box-shadow: inset 0 2px 6px rgba(255,0,102,.08);
+  }
+  .title{margin:6px 0 2px; font-size:18px; font-weight:700; line-height:1.2}
+  .center-label{margin:0; font-size:13px; color:var(--muted)}
+  .actions{margin-top:14px}
+  .btn{
+    display:inline-flex; align-items:center; gap:8px; padding:10px 14px; border-radius:12px;
+    background:var(--primary); color:#fff; text-decoration:none; font-weight:700; border:0;
+    box-shadow:0 6px 14px rgba(255,0,102,.25);
+  }
+  .btn:hover{ background:var(--primary-600) }
+  .btn:focus{ outline:3px solid #ffd1e6; outline-offset:2px }
+  .btn svg{width:16px; height:16px}
 
-    .scene-card {
-      background-color: #fff0f6;
-      border-radius: 12px;
-      padding: 20px;
-      text-align: center;
-      transition: transform 0.2s, box-shadow 0.2s;
-      border: 2px solid #ff0066;
-    }
-
-    .scene-card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
-    }
-
-    .scene-card h2 {
-      font-size: 20px;
-      color: #ff0066;
-      margin-bottom: 10px;
-    }
-
-    .scene-card a {
-      display: inline-block;
-      margin-top: 10px;
-      text-decoration: none;
-      background-color: #ff0066;
-      color: white;
-      padding: 8px 16px;
-      border-radius: 8px;
-      font-weight: bold;
-    }
-
-    .scene-card a:hover {
-      background-color: #cc0052;
-    }
-
-    .footer {
-      margin-top: 30px;
-      font-size: 14px;
-      color: #999;
-    }
-  </style>
+  @media (max-width:620px){
+    .grid{gap:12px}
+    .card{padding:14px}
+    .row{ display:flex; align-items:center; gap:12px }
+    .row .meta{flex:1}
+    .title{font-size:16px}
+    .btn{padding:8px 12px}
+  }
+  footer{max-width:1200px; margin:24px auto 40px; padding:0 18px; color:var(--muted); font-size:13px; text-align:center}
+</style>
 </head>
 <body>
-
-  <img src="https://static.wixstatic.com/media/85afce_3adb3865c88a492b93a8bf2dc69049c3~mv2.png" alt="Logo Musicala" class="logo">
-
-  <div class="container">
-    <h1>Menú de Escenas - AlegreMente 2025</h1>
-    <p>Haz clic en cada escena para ver su contenido detallado.</p>
-
-    <div class="menu-grid">
-      <div class="scene-card">
-        <h2>Escena 1</h2>
-        <p>EL SOL NO CANTA / MI CUERPO ES SOLO MÍO</p>
-        <a href="https://musicalaescuela.github.io/escena1alegremente/">Ver Escena</a>
+  <header>
+    <div class="wrap">
+      <div class="brand">
+        <img src="logo.jpg" alt="Logo Musicala" />
+        <div>
+          <h1>Menú de Escenas – AlegreMente 2025</h1>
+          <div class="sub">Elige una escena para ver su contenido.</div>
+        </div>
       </div>
-
-      <div class="scene-card">
-        <h2>Escena 2</h2>
-        <p>BUENOS AIRES DEL ALMA / MANGO TANGO</p>
-        <a href="https://musicalaescuela.github.io/escena2alegremente/">Ver Escena</a>
-      </div>
-
-      <div class="scene-card">
-        <h2>Escena 3</h2>
-        <p>CARNAVAL / PUEBLO TAMBOR / SIYAHAMBA</p>
-        <a href="https://musicalaescuela.github.io/escena3alegremente/">Ver Escena</a>
-      </div>
-
-      <div class="scene-card">
-        <h2>Escena 4</h2>
-        <p>CIUDAD RIMA / HAPPY BLUES</p>
-        <a href="https://musicalaescuela.github.io/escena4alegremente/">Ver Escena</a>
-      </div>
-
-      <div class="scene-card">
-        <h2>Escena 5</h2>
-        <p>MONTAÑA TRENZA / VIVO EN UN PAÍS</p>
-        <a href="https://musicalaescuela.github.io/escena5alegremente/">Ver Escena</a>
-      </div>
-
-      <div class="scene-card">
-        <h2>Escena 6</h2>
-        <p>TIERRA IMAGINARIA</p>
-        <a href="https://musicalaescuela.github.io/escena6alegremente/">Ver Escena</a>
-      </div>
-
-      <div class="scene-card">
-        <h2>Escena 7</h2>
-        <p>ISLA ALEGRÍA / MERENGUE DEL PRIMER DEDO</p>
-        <a href="https://musicalaescuela.github.io/escena7alegremente/">Ver Escena</a>
-      </div>
-
-      <div class="scene-card">
-        <h2>Escena 8</h2>
-        <p>COLOMBIA TIERRA QUERIDA</p>
-        <a href="https://musicalaescuela.github.io/escena8alegremente/">Ver Escena</a>
+      <div style="margin-left:auto" class="controls">
+        <!-- Filtro por centro (individual) -->
+        <select id="filter" class="select" aria-label="Filtrar por Centro">
+          <option value="">Todos los centros</option>
+          <option>Arroyo</option>
+          <option>Jerusalén</option>
+          <option>Lucero</option>
+          <option>Padre Misericordioso A</option>
+          <option>Padre Misericordioso B</option>
+          <option>Santo Domingo</option>
+          <option>GMMMC</option>
+        </select>
       </div>
     </div>
+  </header>
 
-    <p class="footer">© 2025 Musicala. Todos los derechos reservados.</p>
-  </div>
+  <main>
+    <div class="grid" id="grid">
+      <!-- Escena 1 -->
+      <article class="card" data-centers="Lucero,Padre Misericordioso A">
+        <div class="topline">
+          <div class="num">1</div>
+          <div class="chips">
+            <span class="chip" data-center="Lucero">Lucero</span>
+            <span class="chip" data-center="Padre Misericordioso A">Padre Misericordioso A</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="meta">
+            <h3 class="title">El sol no canta / Mi cuerpo es solo mío</h3>
+            <p class="center-label">Centros: Lucero, Padre Misericordioso A</p>
+          </div>
+          <div class="actions">
+            <a class="btn" href="https://musicalaescuela.github.io/escena1alegremente/" aria-label="Ver escena 1">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7-11-7z"/></svg>
+              Ver escena
+            </a>
+          </div>
+        </div>
+      </article>
 
+      <!-- Escena 2 -->
+      <article class="card" data-centers="Arroyo">
+        <div class="topline">
+          <div class="num">2</div>
+          <div class="chips">
+            <span class="chip" data-center="Arroyo">Arroyo</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="meta">
+            <h3 class="title">Buenos Aires del Alma / Mango Tango</h3>
+            <p class="center-label">Centro: Arroyo</p>
+          </div>
+          <div class="actions">
+            <a class="btn" href="https://musicalaescuela.github.io/escena2alegremente/" aria-label="Ver escena 2">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7-11-7z"/></svg>
+              Ver escena
+            </a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Escena 3 -->
+      <article class="card" data-centers="Lucero,Padre Misericordioso A">
+        <div class="topline">
+          <div class="num">3</div>
+          <div class="chips">
+            <span class="chip" data-center="Lucero">Lucero</span>
+            <span class="chip" data-center="Padre Misericordioso A">Padre Misericordioso A</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="meta">
+            <h3 class="title">Carnaval / Pueblo Tambor / Siyahamba</h3>
+            <p class="center-label">Centros: Lucero, Padre Misericordioso A</p>
+          </div>
+          <div class="actions">
+            <a class="btn" href="https://musicalaescuela.github.io/escena3alegremente/" aria-label="Ver escena 3">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7-11-7z"/></svg>
+              Ver escena
+            </a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Escena 4 -->
+      <article class="card" data-centers="Jerusalén">
+        <div class="topline">
+          <div class="num">4</div>
+          <div class="chips">
+            <span class="chip" data-center="Jerusalén">Jerusalén</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="meta">
+            <h3 class="title">Ciudad Rima / Happy Blues</h3>
+            <p class="center-label">Centro: Jerusalén</p>
+          </div>
+          <div class="actions">
+            <a class="btn" href="https://musicalaescuela.github.io/escena4alegremente/" aria-label="Ver escena 4">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7-11-7z"/></svg>
+              Ver escena
+            </a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Escena 5 -->
+      <article class="card" data-centers="Lucero,Santo Domingo">
+        <div class="topline">
+          <div class="num">5</div>
+          <div class="chips">
+            <span class="chip" data-center="Lucero">Lucero</span>
+            <span class="chip" data-center="Santo Domingo">Santo Domingo</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="meta">
+            <h3 class="title">Montaña Trenza / Vivo en un País</h3>
+            <p class="center-label">Centros: Lucero, Santo Domingo</p>
+          </div>
+          <div class="actions">
+            <a class="btn" href="https://musicalaescuela.github.io/escena5alegremente/" aria-label="Ver escena 5">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7-11-7z"/></svg>
+              Ver escena
+            </a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Escena 6 -->
+      <article class="card" data-centers="Lucero,GMMMC">
+        <div class="topline">
+          <div class="num">6</div>
+          <div class="chips">
+            <span class="chip" data-center="Lucero">Lucero</span>
+            <span class="chip" data-center="GMMMC">GMMMC</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="meta">
+            <h3 class="title">Tierra Imaginaria</h3>
+            <p class="center-label">Centros: Lucero, GMMMC</p>
+          </div>
+          <div class="actions">
+            <a class="btn" href="https://musicalaescuela.github.io/escena6alegremente/" aria-label="Ver escena 6">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7-11-7z"/></svg>
+              Ver escena
+            </a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Escena 7 -->
+      <article class="card" data-centers="Padre Misericordioso B">
+        <div class="topline">
+          <div class="num">7</div>
+          <div class="chips">
+            <span class="chip" data-center="Padre Misericordioso B">Padre Misericordioso B</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="meta">
+            <h3 class="title">Isla Alegría / Merengue del Primer Dedo</h3>
+            <p class="center-label">Centro: Padre Misericordioso B</p>
+          </div>
+          <div class="actions">
+            <a class="btn" href="https://musicalaescuela.github.io/escena7alegremente/" aria-label="Ver escena 7">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7-11-7z"/></svg>
+              Ver escena
+            </a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Escena 8 -->
+      <article class="card" data-centers="Santo Domingo,Lucero">
+        <div class="topline">
+          <div class="num">8</div>
+          <div class="chips">
+            <span class="chip" data-center="Santo Domingo">Santo Domingo</span>
+            <span class="chip" data-center="Lucero">Lucero</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="meta">
+            <h3 class="title">Colombia Tierra Querida</h3>
+            <p class="center-label">Centros: Santo Domingo, Lucero</p>
+          </div>
+          <div class="actions">
+            <a class="btn" href="https://musicalaescuela.github.io/escena8alegremente/" aria-label="Ver escena 8">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7-11-7z"/></svg>
+              Ver escena
+            </a>
+          </div>
+        </div>
+      </article>
+    </div>
+  </main>
+
+  <footer>© 2025 Musicala. Todos los derechos reservados.</footer>
+
+<script>
+  // Filtro por centro (individual): si el valor aparece dentro de data-centers, se muestra.
+  const select = document.getElementById('filter');
+  const cards = [...document.querySelectorAll('.card')];
+
+  select.addEventListener('change', () => {
+    const v = select.value.trim();
+    cards.forEach(c => {
+      if (!v) { c.style.display = ''; return; }
+      const centers = (c.getAttribute('data-centers') || '').split(',').map(s => s.trim());
+      c.style.display = centers.includes(v) ? '' : 'none';
+    });
+  });
+</script>
 </body>
 </html>
-
-
