--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           <div class="chips">
             <span class="chip" data-center="Lucero">Lucero</span>
             <span class="chip" data-center="Padre Misericordioso A">Padre Misericordioso A</span>
+            <span class="chip" data-center="GMMMC">GMMMC</span>
           </div>
         </div>
         <div class="row">
@@ -307,3 +308,4 @@
 </script>
 </body>
 </html>
+
