--- a/index.html
+++ b/index.html
@@ -136,12 +136,14 @@
           <div class="num">2</div>
           <div class="chips">
             <span class="chip" data-center="Arroyo">Arroyo</span>
+            <span class="chip" data-center="Lucero">Lucero</span>
+            <span class="chip" data-center="Jerusalén">Jerusalén</span>
           </div>
         </div>
         <div class="row">
           <div class="meta">
             <h3 class="title">Buenos Aires del Alma / Mango Tango</h3>
-            <p class="center-label">Centro: Arroyo</p>
+            <p class="center-label">Centro: Arroyo, Lucero, Jerusalén</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena2alegremente/" aria-label="Ver escena 2">
@@ -308,4 +310,5 @@
 </script>
 </body>
 </html>
+
 
