--- a/index.html
+++ b/index.html
@@ -107,19 +107,18 @@
   <main>
     <div class="grid" id="grid">
       <!-- Escena 1 -->
-      <article class="card" data-centers="Lucero,Padre Misericordioso A">
+      <article class="card" data-centers="Lucero,GMMMC">
         <div class="topline">
           <div class="num">1</div>
           <div class="chips">
             <span class="chip" data-center="Lucero">Lucero</span>
-            <span class="chip" data-center="Padre Misericordioso A">Padre Misericordioso A</span>
             <span class="chip" data-center="GMMMC">GMMMC</span>
           </div>
         </div>
         <div class="row">
           <div class="meta">
             <h3 class="title">El sol no canta / Mi cuerpo es solo mío</h3>
-            <p class="center-label">Centros: Lucero, Padre Misericordioso A</p>
+            <p class="center-label">Centros: Lucero, GMMMC</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena1alegremente/" aria-label="Ver escena 1">
@@ -131,7 +130,7 @@
       </article>
 
       <!-- Escena 2 -->
-      <article class="card" data-centers="Arroyo">
+      <article class="card" data-centers="Arroyo,Lucero,Jerusalén">
         <div class="topline">
           <div class="num">2</div>
           <div class="chips">
@@ -155,18 +154,19 @@
       </article>
 
       <!-- Escena 3 -->
-      <article class="card" data-centers="Lucero,Padre Misericordioso A">
+      <article class="card" data-centers="Arroyo,Betania,GMMMC">
         <div class="topline">
           <div class="num">3</div>
           <div class="chips">
-            <span class="chip" data-center="Lucero">Lucero</span>
-            <span class="chip" data-center="Padre Misericordioso A">Padre Misericordioso A</span>
+            <span class="chip" data-center="Arroyo">Arroyo</span>
+            <span class="chip" data-center="Betania">Betania</span>
+            <span class="chip" data-center="GMMMC">GMMMC</span>
           </div>
         </div>
         <div class="row">
           <div class="meta">
             <h3 class="title">Carnaval / Pueblo Tambor / Siyahamba</h3>
-            <p class="center-label">Centros: Lucero, Padre Misericordioso A</p>
+            <p class="center-label">Centros: Arroyo, Betania, GMMMC</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena3alegremente/" aria-label="Ver escena 3">
@@ -178,17 +178,19 @@
       </article>
 
       <!-- Escena 4 -->
-      <article class="card" data-centers="Jerusalén">
+      <article class="card" data-centers="Jerusalén,Arroyo,Lucero">
         <div class="topline">
           <div class="num">4</div>
           <div class="chips">
             <span class="chip" data-center="Jerusalén">Jerusalén</span>
+             <span class="chip" data-center="Arroyo">Arroyo</span>
+             <span class="chip" data-center="Lucero">Lucero</span>
           </div>
         </div>
         <div class="row">
           <div class="meta">
             <h3 class="title">Ciudad Rima / Happy Blues</h3>
-            <p class="center-label">Centro: Jerusalén</p>
+            <p class="center-label">Centro: Jerusalén, Arroyo, Lucero</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena4alegremente/" aria-label="Ver escena 4">
@@ -200,18 +202,18 @@
       </article>
 
       <!-- Escena 5 -->
-      <article class="card" data-centers="Lucero,Santo Domingo">
+      <article class="card" data-centers="Jerusalén,Santo Domingo">
         <div class="topline">
           <div class="num">5</div>
           <div class="chips">
-            <span class="chip" data-center="Lucero">Lucero</span>
+            <span class="chip" data-center="Jerusalén">Jerusalén</span>
             <span class="chip" data-center="Santo Domingo">Santo Domingo</span>
           </div>
         </div>
         <div class="row">
           <div class="meta">
             <h3 class="title">Montaña Trenza / Vivo en un País</h3>
-            <p class="center-label">Centros: Lucero, Santo Domingo</p>
+            <p class="center-label">Centros: Jerusalén, Santo Domingo</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena5alegremente/" aria-label="Ver escena 5">
@@ -223,18 +225,19 @@
       </article>
 
       <!-- Escena 6 -->
-      <article class="card" data-centers="Lucero,GMMMC">
+      <article class="card" data-centers="Jerusalén,GMMMC,Arroyo">
         <div class="topline">
           <div class="num">6</div>
           <div class="chips">
-            <span class="chip" data-center="Lucero">Lucero</span>
+            <span class="chip" data-center="Jerusalén">Jerusalén</span>
             <span class="chip" data-center="GMMMC">GMMMC</span>
+            <span class="chip" data-center="Arroyo">Arroyo</span>
           </div>
         </div>
         <div class="row">
           <div class="meta">
             <h3 class="title">Tierra Imaginaria</h3>
-            <p class="center-label">Centros: Lucero, GMMMC</p>
+            <p class="center-label">Centros: Jerusalén, GMMMC, Arroyo</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena6alegremente/" aria-label="Ver escena 6">
@@ -310,5 +313,6 @@
 </script>
 </body>
 </html>
+
 
 
