--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <div class="row">
           <div class="meta">
-            <h3 class="title">El sol no canta / Mi cuerpo es solo mío</h3>
+            <h3 class="title">Mi cuerpo es solo mío</h3>
             <p class="center-label">Centros: Lucero, GMMMC</p>
           </div>
           <div class="actions">
@@ -135,7 +135,7 @@
           <div class="num">2</div>
           <div class="chips">
             <span class="chip" data-center="Arroyo">Arroyo</span>
-            <span class="chip" data-center="Lucero">Lucero</span>
+            <span class="chip" data-center="Arroyo">Arroyo</span>
             <span class="chip" data-center="Jerusalén">Jerusalén</span>
           </div>
         </div>
@@ -158,7 +158,7 @@
         <div class="topline">
           <div class="num">3</div>
           <div class="chips">
-            <span class="chip" data-center="Arroyo">Arroyo</span>
+            <span class="chip" data-center="Betania">Betania</span>
             <span class="chip" data-center="Betania">Betania</span>
             <span class="chip" data-center="GMMMC">GMMMC</span>
           </div>
@@ -178,12 +178,12 @@
       </article>
 
       <!-- Escena 4 -->
-      <article class="card" data-centers="Jerusalén,Arroyo,Lucero">
+      <article class="card" data-centers="Jerusalén,Lucero">
         <div class="topline">
           <div class="num">4</div>
           <div class="chips">
             <span class="chip" data-center="Jerusalén">Jerusalén</span>
-             <span class="chip" data-center="Arroyo">Arroyo</span>
+             <span class="chip" data-center="Jerusalén">Jerusalén</span>
              <span class="chip" data-center="Lucero">Lucero</span>
           </div>
         </div>
@@ -206,14 +206,14 @@
         <div class="topline">
           <div class="num">5</div>
           <div class="chips">
-            <span class="chip" data-center="Jerusalén">Jerusalén</span>
+            <span class="chip" data-center="Lucero">Lucero</span>
             <span class="chip" data-center="Santo Domingo">Santo Domingo</span>
           </div>
         </div>
         <div class="row">
           <div class="meta">
             <h3 class="title">Montaña Trenza / Vivo en un País</h3>
-            <p class="center-label">Centros: Jerusalén, Santo Domingo</p>
+            <p class="center-label">Centros: Lucero, Santo Domingo</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena5alegremente/" aria-label="Ver escena 5">
@@ -229,7 +229,7 @@
         <div class="topline">
           <div class="num">6</div>
           <div class="chips">
-            <span class="chip" data-center="Jerusalén">Jerusalén</span>
+            <span class="chip" data-center="Lucero">Lucero</span>
             <span class="chip" data-center="GMMMC">GMMMC</span>
             <span class="chip" data-center="Arroyo">Arroyo</span>
           </div>
@@ -237,7 +237,7 @@
         <div class="row">
           <div class="meta">
             <h3 class="title">Tierra Imaginaria</h3>
-            <p class="center-label">Centros: Jerusalén, GMMMC, Arroyo</p>
+            <p class="center-label">Centros: Lucero, GMMMC, Arroyo</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena6alegremente/" aria-label="Ver escena 6">
@@ -313,6 +313,7 @@
 </script>
 </body>
 </html>
+
 
 
 
