--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="row">
           <div class="meta">
             <h3 class="title">Carnaval / Pueblo Tambor / Siyahamba</h3>
-            <p class="center-label">Centros: Arroyo, Betania, GMMMC</p>
+            <p class="center-label">Centros: Arroyo, GMMMC</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena3alegremente/" aria-label="Ver escena 3">
@@ -190,7 +190,7 @@
         <div class="row">
           <div class="meta">
             <h3 class="title">Ciudad Rima / Happy Blues</h3>
-            <p class="center-label">Centro: Jerusalén, Arroyo, Lucero</p>
+            <p class="center-label">Centro: Jerusalén, Lucero</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena4alegremente/" aria-label="Ver escena 4">
@@ -202,7 +202,7 @@
       </article>
 
       <!-- Escena 5 -->
-      <article class="card" data-centers="Jerusalén,Santo Domingo">
+      <article class="card" data-centers="Lucero, Santo Domingo">
         <div class="topline">
           <div class="num">5</div>
           <div class="chips">
@@ -313,6 +313,7 @@
 </script>
 </body>
 </html>
+
 
 
 
