--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </article>
 
       <!-- Escena 3 -->
-      <article class="card" data-centers="Arroyo,Betania,GMMMC">
+      <article class="card" data-centers="Betania,GMMMC">
         <div class="topline">
           <div class="num">3</div>
           <div class="chips">
@@ -313,6 +313,7 @@
 </script>
 </body>
 </html>
+
 
 
 
