--- a/index.html
+++ b/index.html
@@ -135,14 +135,13 @@
           <div class="num">2</div>
           <div class="chips">
             <span class="chip" data-center="Arroyo">Arroyo</span>
-            <span class="chip" data-center="Arroyo">Arroyo</span>
             <span class="chip" data-center="Jerusalén">Jerusalén</span>
           </div>
         </div>
         <div class="row">
           <div class="meta">
             <h3 class="title">Buenos Aires del Alma / Mango Tango</h3>
-            <p class="center-label">Centro: Arroyo, Lucero, Jerusalén</p>
+            <p class="center-label">Centro: Arroyo, Jerusalén</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena2alegremente/" aria-label="Ver escena 2">
@@ -159,14 +158,13 @@
           <div class="num">3</div>
           <div class="chips">
             <span class="chip" data-center="Betania">Betania</span>
-            <span class="chip" data-center="Betania">Betania</span>
             <span class="chip" data-center="GMMMC">GMMMC</span>
           </div>
         </div>
         <div class="row">
           <div class="meta">
             <h3 class="title">Carnaval / Pueblo Tambor / Siyahamba</h3>
-            <p class="center-label">Centros: Arroyo, GMMMC</p>
+            <p class="center-label">Centros: Betania, GMMMC</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena3alegremente/" aria-label="Ver escena 3">
@@ -313,6 +311,7 @@
 </script>
 </body>
 </html>
+
 
 
 
