--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="row">
           <div class="meta">
             <h3 class="title">Buenos Aires del Alma / Mango Tango</h3>
-            <p class="center-label">Centro: Arroyo, Jerusalén</p>
+            <p class="center-label">Centro: Arroyo</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena2alegremente/" aria-label="Ver escena 2">
@@ -164,7 +164,7 @@
         <div class="row">
           <div class="meta">
             <h3 class="title">Carnaval / Pueblo Tambor / Siyahamba</h3>
-            <p class="center-label">Centros: Betania, GMMMC</p>
+            <p class="center-label">Centros: Betania</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena3alegremente/" aria-label="Ver escena 3">
@@ -188,7 +188,7 @@
         <div class="row">
           <div class="meta">
             <h3 class="title">Ciudad Rima / Happy Blues</h3>
-            <p class="center-label">Centro: Jerusalén, Lucero</p>
+            <p class="center-label">Centro: Jerusalén</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena4alegremente/" aria-label="Ver escena 4">
@@ -235,7 +235,7 @@
         <div class="row">
           <div class="meta">
             <h3 class="title">Tierra Imaginaria</h3>
-            <p class="center-label">Centros: Lucero, GMMMC, Arroyo</p>
+            <p class="center-label">Centros: Lucero, GMMMC</p>
           </div>
           <div class="actions">
             <a class="btn" href="https://musicalaescuela.github.io/escena6alegremente/" aria-label="Ver escena 6">
@@ -311,6 +311,7 @@
 </script>
 </body>
 </html>
+
 
 
 
