--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
         <div class="row">
           <div class="meta">
-            <h3 class="title">Carnaval / Pueblo Tambor / Siyahamba</h3>
+            <h3 class="title">Pueblo Tambor / Siyahamba</h3>
             <p class="center-label">Centros: Betania</p>
           </div>
           <div class="actions">
@@ -229,7 +229,7 @@
         </div>
         <div class="row">
           <div class="meta">
-            <h3 class="title">Tierra Imaginaria</h3>
+            <h3 class="title">Tierra Imaginaria/La vida es un carnaval</h3>
             <p class="center-label">Centros: Lucero, GMMMC</p>
           </div>
           <div class="actions">
@@ -306,6 +306,7 @@
 </script>
 </body>
 </html>
+
 
 
 
